# provara

./: .gitattributes  .gitignore  AGENTS.md  AGENT_GUARDRAILS.md  ARCHITECT_SPRINT_REPORT.md  ARCHITECT_SPRINT_SUMMARY.md  BOOTSTRAP.md  CHECKSUMS.txt  CLAUDE.md  CLOUDFLARE_SETUP.md  CODEX.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  LICENSE  Makefile  PROTOCOL_PROFILE.txt  PROVARA_MULTI_AGENT_SPRINT.md  QUICKSTART.md  QWEN.md  README.md  RECOVERY_INSTRUCTIONS.md  SECURITY.md  SOUL.md  SPRINT_DISPATCH_2026-02-17.md  SPRINT_SYNC_CHECK_2026-02-17.md  WEBSITE_SPRINT.md  backup_vault.bat  backup_vault.ps1  backup_vault.sh  check_backpack.bat  check_backpack.sh  coverage.json  docker-compose.yml  errors.json  genesis_keys.json  init_backpack.bat  init_backpack.sh  mkdocs.yml  (+9 more)
.githooks/: pre-commit
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmark.yml  ci.yml  conformance.yml  coverage.yml  docker-mcp.yml  playground.yml  site.yml  spec-pages.yml
.locks/: README.md
Examples/: README.md
Examples/Demo_Backpack/: manifest.json  manifest.sig  merkle_root.txt
Examples/ai_governance_events/: README.md  ai_cost_record_event.json  model_eval_event.json  policy_decision_event.json  prompt_execution_event.json  redteam_test_event.json
Examples/plugins/audit_plugin/: README.md  __init__.py  pyproject.toml
Family_Guide/: START_HERE.md
Genesis_Vault/: manifest.json  manifest.sig  merkle_root.txt
Genesis_Vault/events/: events.ndjson
Genesis_Vault/identity/: genesis.json  keys.json
Genesis_Vault/policies/: retention_policy.json  safety_policy.json  sync_contract.json
Keys_Info/: HOW_TO_STORE_KEYS.md
Recovery/: WHAT_TO_DO.md
SNP_Core/docs/: README.md
SNP_Core/test/: backpack_compliance_v1.py  test_bootstrap.py  test_checkpoint_v0.py  test_perception_v0.py  test_public_api.py  test_reducer_v0.py  test_rekey.py  test_sync_v0.py  test_vectors.py
content/blog/: why-your-ai-agents-memory-needs-cryptographic-proof.md
content/comparisons/: provara-agentguard-integration.md  provara-vs-mcp-memory.md
content/launch/: blog_launch_post.md  hn_faq.md  reddit_post.md  show_hn_post.md  twitter_thread.md
content/papers/: cryptographic-event-logs-for-llm-agent-memory.md  provara-protocol-paper.md
demos/: claude_agent_vault_memory.md  video_storyboard.md
docs/: API_MIGRATION.md  BACKPACK_PROTOCOL_v1.0.html  BACKPACK_PROTOCOL_v1.0.md  CHAIN_VALIDATION.md  COMPARISON.md  CONFORMANCE_KIT.md  CRYPTO_SHREDDING.md  DATA_RESIDENCY.md  DOCKER_MCP.md  ERROR_CODES.md  EXTENSION_REGISTRY.md  GDPR_COMPLIANCE.md  GOVERNANCE_ALIGNMENT.md  HARDWARE_KEY_SUPPORT.md  IANA_CONSIDERATIONS.md  KEY_COMPROMISE_RECOVERY.md  KEY_ROTATION_CEREMONY.md  MCP_MIGRATION.md  MULTI_VAULT_TOPOLOGY.md  OFFLINE_SYNC_PROTOCOL.md  OPEN_DECISIONS.md  PLAYGROUND_ARCHITECTURE.md  PLAYGROUND_FLOW_DIAGRAMS.md  PLUGIN_API.md  POST_QUANTUM_MIGRATION.md  QUICKSTART.md  REDACTION_SPEC.md  RFC3161_TIMESTAMPING.md  SCITT_MAPPING.md  SIGSTORE_ANCHORING.md  SPEC_DECISIONS.md  TEST_COUNT_RECONCILIATION_2026-02-18.md  TEST_MATRIX.md  THREAT_MODEL.md  THRESHOLD_SIGNATURES.md  VAULT_ARCHIVAL.md  VISUAL_IDENTITY_SYSTEM.md  VISUAL_QA_CHECKLIST.md  ZK_PROOF_HOOKS.md  contributing.md  (+4 more)
docs/agents/: CLAW_PROFILE.md  CODEX_PROFILE.md  GEMINI_PROFILE.md
docs/api/: getting-started.md  index.md
docs/api-reference/: index.md
docs/cookbook/: README.md  ai_agent_memory.md  audit_log_saas.md  legal_discovery.md  supply_chain.md
docs/plans/: 2026-02-15-design-principles.md
docs/prompts/: anonymous-promotion-brainstorm.md
docs/schemas/: README.md  agent_events.schema.json  events.schema.json  market_events.schema.json  messaging_events.schema.json  provara_event_schema_v1.json
docs/tutorials/: 01_first_vault.md  02_multi_actor_dispute.md  03_checkpoint_query.md  04_mcp_integration.md  05_anchor.md  README.md
formal/: ANALYSIS_AND_VALIDATION.md  README.md  provara_chain.cfg  provara_chain.tla
mcp/: README.md  provara_cli.py  provara_server.py  provara_server_http.py  request_validator.py  test_http_server.py  test_integration.py  test_mcp_server.py
playground/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
playground/public/: CNAME
playground/src/: App.d.ts.map  App.js  App.js.map  App.tsx  index.css
provara-rs/: BUILD.md  Cargo.toml  README.md  SPRINT_REPORT.md
provara-rs/.cargo/: config.toml
provara-rs/jcs-rs/: Cargo.toml  README.md
provara-rs/jcs-rs/src/: lib.rs
provara-rs/jcs-rs/tests/: conformance.rs
provara-rs/provara-core/: Cargo.toml  README.md  package.json
provara-rs/provara-core/.cargo/: config.toml
provara-rs/provara-core/src/: conformance.rs  lib.rs  reducer.rs  test_vectors.rs
provara-ts/: README.md  package-lock.json  package.json  tsconfig.json
schemas/: README.md  diagnose.py  event_types.json  quick_test.py  run_test.bat  test_each_schema.py  test_schemas.py  validate_event.py
sites/: DEPLOY.md  DNS_SETUP.md  README.md
test_vectors/: canonical_conformance.json  vectors.json
tests/: backpack_compliance_v1.py  test_action.py  test_adversarial.py  test_agent_loop.py  test_archival.py  test_bootstrap.py  test_bootstrap_cli.py  test_byzantine_scenarios.py  test_byzantine_sim.py  test_canonicalization_properties.py  test_checkpoint_v0.py  test_cli.py  test_cli_commands.py  test_cli_commands_extended.py  test_cli_errors.py  test_cli_errors_extended.py  test_cli_main.py  test_cli_misc.py  test_conformance_kit.py  test_crypto_coverage.py  test_crypto_shred.py  test_errors.py  test_export.py  test_export_internals.py  test_forensic_export.py  test_forgery.py  test_forgery_attacks.py  test_fuzz_adversarial.py  test_fuzz_canonical.py  test_fuzz_mcp.py  test_fuzz_protocol.py  test_hardware.py  test_init_exports.py  test_manifest_generator.py  test_market_oracle.py  test_mcp.py  test_mcp_stub.py  test_messaging.py  test_migrate.py  test_package.py  (+23 more)
tools/: check_docs_consistency.py  check_locks.py  check_test_layout.py
(+201 files in other folders)
