[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "provara-protocol"
version = "1.0.0"
description = "Tamper-evident memory protocol for humans and AI agents. Ed25519 + SHA-256 + event sourcing."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Provara"},
]
keywords = [
    "cryptography",
    "ed25519",
    "event-sourcing",
    "memory-protocol",
    "tamper-evident",
    "merkle-tree",
    "provara",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "cryptography>=41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "hypothesis>=6.0",
]

[project.scripts]
provara = "provara.cli:main"

[project.urls]
Homepage = "https://provara.dev"
Documentation = "https://provara.dev"
Repository = "https://github.com/provara-protocol/provara"
Issues = "https://github.com/provara-protocol/provara/issues"
Changelog = "https://github.com/provara-protocol/provara/releases"

# ---------------------------------------------------------------------------
# Package discovery
# ---------------------------------------------------------------------------
# Standard src-layout: modules live in src/provara
#
# For local development:
#   pip install -e .
#   or
#   PYTHONPATH=src python -m provara.cli ...

[tool.setuptools.packages.find]
where = ["src"]
include = ["provara*"]

# ---------------------------------------------------------------------------
# Test configuration
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# PYTHONPATH must include src for imports to resolve.
# Run with: PYTHONPATH=src python -m pytest
addopts = "-v --tb=short"
