[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "provara-protocol"
version = "1.0.1"
description = "Self-sovereign cryptographic event logs. Ed25519 · SHA-256 · RFC 8785"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Provara"},
]
keywords = [
    "cryptography",
    "ed25519",
    "event-sourcing",
    "memory-protocol",
    "tamper-evident",
    "merkle-tree",
    "provara",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "cryptography>=41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.0",
    "mkdocs-material>=9.0",
]
timestamps = [
    "rfc3161-client>=1.0",
]
mcp = [
    "mcp>=1.0",
]

[project.scripts]
provara = "provara.cli:main"
provara-mcp = "provara.mcp:main"

[project.urls]
Homepage = "https://github.com/provara-protocol/provara"
Documentation = "https://provara-protocol.github.io/provara/"
Playground = "https://provara-protocol.github.io/provara/"
Repository = "https://github.com/provara-protocol/provara"
Issues = "https://github.com/provara-protocol/provara/issues"
Changelog = "https://github.com/provara-protocol/provara/releases"

# ---------------------------------------------------------------------------
# Package discovery
# ---------------------------------------------------------------------------
# Standard src-layout: modules live in src/provara
#
# For local development:
#   pip install -e .
#   or
#   PYTHONPATH=src python -m provara.cli ...

[tool.setuptools.packages.find]
where = ["src"]
include = ["provara*"]

# ---------------------------------------------------------------------------
# Test configuration
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# PYTHONPATH must include src for imports to resolve.
# Run with: PYTHONPATH=src python -m pytest
addopts = "-v --tb=short"

[tool.coverage.run]
branch = true
source = ["src/provara/"]
omit = [
    "tests/*",
    "tools/*",
    "*/__pycache__/*",
]
