[workspace]
resolver = "2"
members = [
    "jcs-rs",
    "provara-core",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/provara-protocol/provara"
authors = ["Hunt Information Systems LLC"]
rust-version = "1.70"

[workspace.dependencies]
jcs-rs = { path = "jcs-rs", version = "0.1.0" }

# Crypto dependencies (RustCrypto)
ed25519-dalek = { version = "2.1", features = ["serde", "rand_core"] }
sha2 = "0.10"
signature = "2.2"

# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WASM support
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }

# Error handling
thiserror = "1.0"

# Base64 encoding
base64 = "0.21"

# Hex encoding
hex = "0.4"
