[package]
name = "jcs-rs"
version = "0.1.0"
edition = "2021"
description = "RFC 8785 JSON Canonicalization Scheme (JCS) for Rust"
license = "Apache-2.0"
repository = "https://github.com/provara-protocol/provara"
documentation = "https://docs.rs/jcs-rs"
keywords = ["json", "canonical", "rfc8785", "jcs", "serialization"]
categories = ["encoding", "parser-implementations"]
readme = "README.md"

[dependencies]
serde_json = "1"

[features]
default = []
no_std = []
